--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 scikit-learn~=1.7.2
 pandas~=2.3.2
-scipy~=1.16.2
 matplotlib~=3.10.6
 seaborn~=0.13.2
-numpy~=2.3.3
 joblib~=1.5.2
+numpy~=1.26.4
+scipy~=1.13.1
+gensim~=4.3.3
